src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Code_Name_EPM_ID__c</fullName>
        <description>VPLCH Level 4</description>
        <label>Code Name EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Name__c</fullName>
        <description>VPLCH Level 4</description>
        <label>Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlled_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to designate controlled technology</description>
        <label>Controlled Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Code_Short_Name__c</fullName>
        <label>Division Code Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <description>A list of all divisions this product could be associated with across the VPH and VPLCH Hierarchy</description>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Intel_Service_Date__c</fullName>
        <label>End of Intel Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID of the record in the upstream system</description>
        <label>External ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source_Name__c</fullName>
        <description>The source of the external upstream system</description>
        <label>External Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code_Short_Name__c</fullName>
        <label>Group Code Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <description>Group Code</description>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <description>ID for the hierarchy that the record is being sourced from</description>
        <label>Hierarchy ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Name__c</fullName>
        <description>Description of which Hierarchy this record was mastered in</description>
        <label>Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Launch_Date__c</fullName>
        <label>Pipeline Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Platform_Config_EPM_ID__c</fullName>
        <description>VPLCH Level 2</description>
        <label>Platform Config EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Config__c</fullName>
        <description>A more detailed view of the platform</description>
        <label>Platform Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_EPM_ID__c</fullName>
        <description>VPLCH Level 1</description>
        <label>Platform EPM ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Name__c</fullName>
        <description>VPLCH Level 1</description>
        <label>Platform Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_EPM_ID__c</fullName>
        <description>VPH Level 2 EPM ID</description>
        <label>Product Family EPM ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>VPH Level 2</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Series_EPM_ID__c</fullName>
        <description>EPM ID for the VPH Level 3</description>
        <label>Product Series EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Series__c</fullName>
        <description>Product Series</description>
        <label>Product Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>Integration Field - fg_mtrl_sts_cd</description>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_EPM_ID__c</fullName>
        <description>VPLCH lvl 3
VPH lvl 1</description>
        <label>Product Type EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product type</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment_Code__c</fullName>
        <label>Vertical Segment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Platform_Name__c</columns>
        <columns>Platform_Config__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Series__c</columns>
        <columns>Product__c</columns>
        <columns>Pipeline_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>